# antropic_agent_sdk

./: .env.example  CLAUDE.md  README.md  pyproject.toml  server.py  stock_tools.py
.claude/: settings.local.json
.claude/agents/: agent-sdk-expert.md
docs/agent-sdk/: 01-overview.md  02-python-sdk.md  03-streaming-vs-single-mode.md  04-permissions.md  05-sessions.md  06-structured-outputs.md  07-hosting.md  08-modifying-system-prompts.md  09-mcp.md  10-custom-tools.md  11-subagents.md  12-slash-commands.md  13-skills.md  14-cost-tracking.md  15-todo-tracking.md  16-plugins.md  README.md
docs/internal-apis/: stock-prices-api.md
http-server-agent-sdk/: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  server.py  stock_tools.py
http-server-agent-sdk/tests/: __init__.py  conftest.py  integration_test.py  test_analyze_endpoint.py  test_analyze_integration.py  test_server.py  test_stock_tools.py
http-server-agent-sdk/thoughts/shared/tickets/: 2025-12-10-session-level-analysis-date.md
tests/: conftest.py  integration_test.py  load_test.py  test_server.py  test_stock_tools.py  test_stock_tools_integration.py
thoughts/shared/plans/: 2025-12-02-http-server-agent-sdk.md  2025-12-03-stock-prices-custom-tool.md  2025-12-04-swing-trading-agent.md  2025-12-06-agent-response-metadata.md  2025-12-09-analyze-parallel-requests.md  2025-12-09-fix-token-usage-reporting.md  2025-12-10-session-level-analysis-date.md
thoughts/shared/tickets/: 2025-12-02-http-server-agent-sdk.md  2025-12-03-stock-prices-custom-tool.md  (+5 more)
